--- a/notebooks/Test_models.ipynb
+++ b/notebooks/Test_models.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
     "    # ACh dynamics is deconvolved using a previously estimated decay time constant g\n",
     "    g = 0.9791\n",
     "    baseline = 0\n",
-    "    convfit_tm, deconvol_tm, _ = deconv.deconvolveCa_py(signal,g,baseline)\n",
+    "    convfit_tm, deconvol_tm = deconv.deconvolveCa_py(signal,g,baseline)\n",
     "    convfit[name] = convfit_tm\n",
     "    deconv_signals[name] = deconvol_tm"
    ]
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
