--- a/notebooks/Training_CNNs.ipynb
+++ b/notebooks/Training_CNNs.ipynb
@@ -43,6 +43,7 @@
     "From previous data on the iAChSnFR reporter, the effect of ACh on fluorescence emission is shown below (orange traces). In addition to ACh, in vivo fluorescence is modulated by light absorption by hemoglobin. The latter is present as a mixture of oxygen-bound (HbO2) and oxygen-unbound (Hb) forms. The expected spectral effect on fluorescence, given an arbitrary amount of each hemoglobin form, is shown in the right plot below.\n",
     "\n",
     "![image](ACh_Hb_comp.png)\n",
+    "\n",
     "<img src=\"ACh_Hb_comp.png\" width=\"800\" />\n",
     "\n",
     "**Left:** Emission spectrum of iAChSnFR excited at 440 nm without (Apo) and with ACh in the medium. **Rigth:** Relative spectral effect of arbitrary concentrations of ACh, HbO2 and Hb on fluorescence.\n",
@@ -1399,7 +1400,7 @@
     "id": "518Hmukrvohc"
    },
    "source": [
-    "In this initial assessment of denoising performance, the denoising approach demonstrates a notable enhancement when contrasted with a Gaussian smoothing method. It effectively restores the sharp features present in the ground truth (\"clean\") data. However, it's important to note that this evaluation is merely a preliminary visual examination of the denoising results. For a comprehensive quantitative analysis of the model's performance, please refer to the \"Test_models\" notebook within this repository."
+    "In this initial assessment of denoising performance, the denoising approach demonstrates a notable enhancement when contrasted with a Gaussian smoothing method. It effectively restores the sharp features present in the ground truth (\"clean\") data. However, it's important to note that this evaluation is merely a preliminary visual examination of the denoising results. For a comprehensive quantitative analysis of the model's performance, please refer to the [Test_models](Test_models.ipynb) notebook within this repository."
    ]
   }
  ],
