--- a/notebooks/Training_CNNs.ipynb
+++ b/notebooks/Training_CNNs.ipynb
@@ -42,9 +42,9 @@
     "### Spectral signatures of biological signals\n",
     "From previous data on the iAChSnFR reporter, the effect of ACh on fluorescence emission is shown below (orange traces). In addition to ACh, in vivo fluorescence is modulated by light absorption by hemoglobin. The latter is present as a mixture of oxygen-bound (HbO2) and oxygen-unbound (Hb) forms. The expected spectral effect on fluorescence, given an arbitrary amount of each hemoglobin form, is shown in the right plot below.\n",
     "\n",
-    "![image](ACh_Hb_comp.png)\n",
+    "![image](ACh_Hb_comp.PNG)\n",
     "\n",
-    "<img src=\"ACh_Hb_comp.png\" width=\"800\" />\n",
+    "<img src=\"ACh_Hb_comp.PNG\" width=\"800\" />\n",
     "\n",
     "**Left:** Emission spectrum of iAChSnFR excited at 440 nm without (Apo) and with ACh in the medium. **Rigth:** Relative spectral effect of arbitrary concentrations of ACh, HbO2 and Hb on fluorescence.\n",
     "\n",
