--- a/notebooks/Training_CNNs.ipynb
+++ b/notebooks/Training_CNNs.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "![image](ACh_Hb_comp.png)\n",
     "\n",
-    "<img src=\"DeepDenoise/notebooks/ACh_Hb_comp.png\" width=\"800\" />\n",
+    "<img src=\"https://github.com/rmodosantos/DeepDenoise/blob/main/notebooks/ACh_Hb_comp.png\" width=\"800\" />\n",
     "\n",
     "**Left:** Emission spectrum of iAChSnFR excited at 440 nm without (Apo) and with ACh in the medium. **Rigth:** Relative spectral effect of arbitrary concentrations of ACh, HbO2 and Hb on fluorescence.\n",
     "\n",
