--- a/notebooks/Test_models.ipynb
+++ b/notebooks/Test_models.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "The goal is then to compare how well different pipelines (applying Gaussian smoothing, CNN denoising or none) recover ground truth ACh release events.\n",
     "\n",
-    "![](Processing_pipelines.png)"
+    "<img src=\"http://drive.google.com/uc?export=view&id=1X_85L9zPWdyiAwA_bmh56Tymr85QXXQ3\" with=\"800\" />"
    ]
   },
   {
